# claude-catan

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  runpod_handler.py
catan_ai/env/: __init__.py  catan_env.py  vec_env.py
catan_ai/eval/: tournament.py
catan_ai/models/: __init__.py  action_heads.py  encoder.py  policy.py
catan_ai/training/: imitation.py  mcts.py  ppo.py
scripts/: deploy_runpod.sh  evaluate.py  runpod_setup.sh  train.py  train_mcts.py
